--- a/.github/workflows/codespell.yml
+++ b/.github/workflows/codespell.yml
@@ -1,4 +1,4 @@
-name: codespell
+name: Codespell
 on:
   workflow_dispatch:
   pull_request:
@@ -10,5 +10,5 @@ jobs:
   codespell:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: codespell-project/actions-codespell@v2
+      - uses: actions/checkout@v4
+      - uses: codespell-project/actions-codespell@v2
