--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: "Lint"
+name: Lint
 on:
   workflow_dispatch:
   pull_request:
@@ -8,11 +8,11 @@ on:
       - stable-*.*
   schedule:
     # Every day at 3:30 AM UTC
-    - cron: '30 3 * * *'
+    - cron: 30 3 * * *
 
 jobs:
   lint:
-    name: "${{ matrix.linter }}"
+    name: ${{ matrix.linter }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -21,12 +21,11 @@ jobs:
           - gaplint
           - cpplint
     steps:
-    - name: "Check out the repository"
-      uses: actions/checkout@v4
-    - name: "Set up Python"
-      uses: actions/setup-python@v5
-    - name: "Install ${{ matrix.linter }} with pip"
-      run: pip install ${{ matrix.linter }}
-    - name: "Run ${{ matrix.linter }} on the Digraphs package"
-      run: bash etc/${{ matrix.linter }}.sh
-
+      - name: Check out the repository . . .
+        uses: actions/checkout@v4
+      - name: Set up Python . . .
+        uses: actions/setup-python@v5
+      - name: Install ${{ matrix.linter }} with pip . . .
+        run: pip install ${{ matrix.linter }}
+      - name: Run ${{ matrix.linter }} on the Digraphs package . . .
+        run: bash etc/${{ matrix.linter }}.sh
