--- a/.github/workflows/valgrind.yml
+++ b/.github/workflows/valgrind.yml
@@ -14,6 +14,10 @@ env:
   VALGRIND: valgrind --trace-children=yes --leak-check=full --error-exitcode=1
   NO_COVERAGE: true
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   test-valgrind:
     name: Ubuntu / GAP stable-4.13 / valgrind
