--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@
 /doc/*.css
 /doc/*.js
 Makefile
+_*.xml
 aclocal.m4
 autom4te.*
 bin/
@@ -54,9 +55,9 @@ digraphs-lib
 doc/_*.xml
 gen/
 gh-pages/
+main.xml
 manual.lab
 missing
 src/pkgconfig.h.in
 tags
 tst/out/
-_*.xml
