--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -30,6 +30,7 @@ jobs:
           - stable-4.11
           - stable-4.12
           - stable-4.13
+          - stable-4.14
         only-needed:
           - true
           - false
