--- a/.github/workflows/os.yml
+++ b/.github/workflows/os.yml
@@ -58,26 +58,22 @@ jobs:
           curl --retry 5 -L -O "https://digraphs.github.io/Digraphs/${{ env.DIGRAPHS_LIB }}.tar.gz"
           tar xf "${{ env.DIGRAPHS_LIB }}.tar.gz"
       - name: Run DigraphsTestInstall . . .
-        # TODO: Replace below with gap-actions/run-pkg-tests@v2 if the functionality gets added
-        uses: ./.github/actions/run-pkg-tests
+        uses: gap-actions/run-pkg-tests@v3
         with:
           NO_COVERAGE: true
           GAP_TESTFILE: tst/github_actions/install.g
       - name: Run DigraphsTestStandard . . .
-        # TODO: Replace below with gap-actions/run-pkg-tests@v2 if the functionality gets added
-        uses: ./.github/actions/run-pkg-tests
+        uses: gap-actions/run-pkg-tests@v3
         with:
           NO_COVERAGE: true
           GAP_TESTFILE: tst/github_actions/standard.g
       - name: Run DigraphsTestManualExamples . . .
-        # TODO: Replace below with gap-actions/run-pkg-tests@v2 if the functionality gets added
-        uses: ./.github/actions/run-pkg-tests
+        uses: gap-actions/run-pkg-tests@v3
         with:
           NO_COVERAGE: true
           GAP_TESTFILE: tst/github_actions/examples.g
       - name: Run DigraphsTestExtreme . . .
-        # TODO: Replace below with gap-actions/run-pkg-tests@v2 if the functionality gets added
-        uses: ./.github/actions/run-pkg-tests
+        uses: gap-actions/run-pkg-tests@v3
         with:
           NO_COVERAGE: true
           GAP_TESTFILE: tst/github_actions/extreme.g
