--- a/.github/workflows/valgrind.yml
+++ b/.github/workflows/valgrind.yml
@@ -38,15 +38,13 @@ jobs:
       - name: Build Digraphs . . .
         uses: gap-actions/build-pkg@v1
       - name: Run DigraphsTestInstall . . .
-        # TODO: Replace below with gap-actions/run-pkg-tests@v2 if the functionality gets added
-        uses: ./.github/actions/run-pkg-tests
+        uses: gap-actions/run-pkg-tests@v3
         with:
           NO_COVERAGE: true
           GAP_TESTFILE: tst/github_actions/install.g
           pre-gap: ${{ env.VALGRIND }}
       - name: Run DigraphsTestStandard . . .
-        # TODO: Replace below with gap-actions/run-pkg-tests@v2 if the functionality gets added
-        uses: ./.github/actions/run-pkg-tests
+        uses: gap-actions/run-pkg-tests@v3
         with:
           NO_COVERAGE: true
           GAP_TESTFILE: tst/github_actions/standard.g
